--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -2,15 +2,15 @@
   "culture": "en-GB",
   "texts": {
     "Menu:Home": "Home",
-    "IndexPage_1": "Merhaba.",
-    "IndexPage_2": "Ön Muhasebe eğitim setine hoş geldiniz.",
-    "IndexPage_3": "Bu sayfa bu projenin tanıtım sayfasıdır. Projenin tanıtımıyla ilgili tüm içerik bu sayfada gösterilecektir.",
-    "IndexPage_4": "Birim, Banka, Banka Şube, Banka Hesap, Cari, Kasa, Depo, Stok, Hizmet, Masraf... vb. ayrı ayrı kartlar oluşturabilme imkanı.",
-    "IndexPage_5": "Hem alış hem de satış faturalarını ayrı ayrı girilebilme imkanı. Satış faturalarının baskı önizleme yapılarak çıktısının alınabilme imkanı.",
-    "IndexPage_6": "Ödeme belgeleriyle ilgili tüm işlemlerin türüne göre ayrı ayrı makbuzlarda takip edilebilme imkanı. Tahsilat Makbuzu, Ödeme Makbuzu... vb.",
-    "IndexPage_7": "Hem kendi hem de müşterilerden alınan ödeme belgelerinin ayrı ayrı takip edilebilme imkanı. (Çek, Senet, Nakit, Havale, Pos vb.)",
-    "IndexPage_8": "Sınırsız sayıda rapor oluşturup kullanabilme imkanı.",
-    "IndexPage_9": "Rol bazlı ve kullanıcı bazlı yetkilendirme sistemi.",
+    "IndexPage_1": "Hello",
+    "IndexPage_2": "Welcome to MK Pre-Accounting System.",
+    "IndexPage_3": "All the features that will allow you to manage the financial operation of your business are in the MK pre-accounting program.",
+    "IndexPage_4": "Unit, Bank, Bank Branch, Bank Account, Current, Cash, Warehouse, Stock, Service, Expense... etc. Possibility to create individual cards.",
+    "IndexPage_5": "Possibility to enter both purchase and sales invoices separately. Possibility of printing out sales invoices by printing preview.",
+    "IndexPage_6": "Possibility of tracking all transactions related to payment documents in separate receipts according to their type. Collection Receipt, Payment Receipt...etc.",
+    "IndexPage_7": "The ability to track separately the payment documents received from both own and customers. (Cheque, Promissory Note, Cash, Money Order, Pos etc.)",
+    "IndexPage_8": "Possibility to create and use unlimited number of reports.",
+    "IndexPage_9": "Role based and user based authorization system.",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Exception:00001": "The {code} code you entered has been used before.",
     "Exception:00002": "The card you are trying to delete has transactions that have been processed. The card cannot be deleted.",
@@ -391,15 +391,19 @@
     "Logout": "Logout",
     "Login": "Login",
     "DepartmentAndTermSelect": "Department And Term Select",
-    "FinancialStatusSummary": "FİNANSAL DURUM ÖZETİ",
-    "CashStatusChart": "Kasa Durum Grafiği",
-    "BankStatusChart": "Banka Durum Grafiği",
-    "PaymentTypesDistributionChart": "Ödeme Belgeleri Dağılım Grafiği",
-    "LastTenTransactionsTradedInTheCashier": "Kasada İşlem Gören Son On Hareket",
-    "LastTenTransactionsTradedInTheBank": "Bankada İşlem Gören Son On Hareket",
-    "OverdueReceivables": "Ödemesi Geciken Alacaklar",
-    "MoreInformation": "Detaylı bilgi",
-    "Reports": "Raporlar",
-    "Authorization": "Yetkilendirme"
+    "FinancialStatusSummary": "Financial Status Summary",
+    "CashStatusChart": "Cash Status Chart",
+    "BankStatusChart": "Bank Status Chart",
+    "PaymentTypesDistributionChart": "Payment Types Distribution Chart",
+    "LastTenTransactionsTradedInTheCashier": "Last Ten Transactions Traded In The Cashier",
+    "LastTenTransactionsTradedInTheBank": "Last Ten Transactions Traded In The Bank",
+    "OverdueReceivables": "Overdue Receivables",
+    "MoreInformation": "More Information",
+    "Reports": "Reports",
+    "Authorization": "Authorization",
+    "PaymentDocumentsDistributionChart": "Payment Documents Distribution",
+    "Income": "Income",
+    "ReceiptNo": "Receipt No",
+    "PaymentTypes": "Payment Types"
   }
 }
