--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -404,6 +404,7 @@
     "PaymentDocumentsDistributionChart": "Ödeme Belgeleri Dağılımı",
     "Income": "Gelir",
     "ReceiptNo": "Makbuz No",
-    "PaymentTypes": "Ödeme Tipleri"
+    "PaymentTypes": "Ödeme Tipleri",
+    "BankCard": "Banka Kartı"
   }
 }
