--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -404,6 +404,7 @@
     "PaymentDocumentsDistributionChart": "Payment Documents Distribution",
     "Income": "Income",
     "ReceiptNo": "Receipt No",
-    "PaymentTypes": "Payment Types"
+    "PaymentTypes": "Payment Types",
+    "BankCard": "Bank Card"
   }
 }
