--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -405,6 +405,7 @@
     "Income": "Gelir",
     "ReceiptNo": "Makbuz No",
     "PaymentTypes": "Ödeme Tipleri",
-    "BankCard": "Banka Kartı"
+    "BankCard": "Banka Kartı",
+    "TermCard": "Dönem Kartı"
   }
 }
